--- a/item-service/src/main/resources/templates/basic/items.html
+++ b/item-service/src/main/resources/templates/basic/items.html
@@ -6,8 +6,8 @@
           th:href="@{/css/bootstrap.min.css}"
           rel="stylesheet">
 </head>
-<body>
 
+<body>
 <div class="container" style="max-width: 600px">
     <div class="py-5 text-center">
         <h2>상품 목록</h2>
@@ -38,7 +38,7 @@
                            th:href="@{/basic/items/{itemId}(itemId=${item.id})}"
                            th:text="${item.id}">회원ID</a></td>
                     <td><a href="item.html"
-                           th:href="@{|/basic/items/${itemId}|}"
+                           th:href="@{|/basic/items/${item.id}|}"
                            th:text="${item.itemName}">상품명 </a></td>
                     <td th:text="${item.price}">10000</td>
                     <td th:text="${item.quantity}">10</td>
