--- a/item-service/src/main/resources/templates/basic/addForm.html
+++ b/item-service/src/main/resources/templates/basic/addForm.html
@@ -1,21 +1,26 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css"
+          th:href="@{/css/bootstrap.min.css}"
+          rel="stylesheet">
     <style>
         .container {
             max-width: 560px;
         }
     </style>
 </head>
+
 <body>
 <div class="container">
     <div class="py-5 text-center">
         <h2>상품 등록 폼</h2>
     </div>
     <h4 class="mb-3">상품 입력</h4>
-    <form action="item.html" method="post">
+    <form action="item.html"
+          th:action
+          method="post">
         <div>
             <label for="itemName">상품명</label>
             <input type="text" id="itemName" name="itemName" class="form-control" placeholder="이름을 입력하세요">
@@ -34,7 +39,10 @@
                 <button class="w-100 btn btn-primary btn-lg" type="submit">상품 등록</button>
             </div>
             <div class="col">
-                <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='items.html'" type="button">취소</button>
+                <button class="w-100 btn btn-secondary btn-lg"
+                        onclick="location.href='items.html'"
+                        th:onclick="|location.href='@{/basic/items}'|"
+                        type="button">취소</button>
             </div>
         </div>
     </form>
